[workspace.package]
license = "MIT-0"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://paritytech.github.io/polkadot-sdk/"
repository = "https://github.com/paritytech/polkadot-sdk-parachain-template.git"
edition = "2021"

[workspace]
members = [
    "node",
    "pallets/template",
    "runtime",
]
resolver = "2"

[workspace.dependencies]
educhain-runtime = { path = "./runtime", default-features = false }
pallet-parachain-template = { path = "./pallets/template", default-features = false }
clap = { version = "4.5.3" }
codec = { version = "3.6.12", default-features = false, package = "parity-scale-codec" }
color-print = { version = "0.3.4" }
cumulus-client-cli = { version = "0.17.0", default-features = false }
cumulus-client-collator = { version = "0.17.0", default-features = false }
cumulus-client-consensus-aura = { version = "0.17.0", default-features = false }
cumulus-client-consensus-common = { version = "0.17.0", default-features = false }
cumulus-client-consensus-proposer = { version = "0.15.0", default-features = false }
cumulus-client-service = { version = "0.17.0", default-features = false }
cumulus-primitives-core = { version = "0.15.0", default-features = false }
cumulus-primitives-parachain-inherent = { version = "0.15.0", default-features = false }
cumulus-relay-chain-interface = { version = "0.17.0", default-features = false }
docify = { version = "0.2.8" }
frame-benchmarking = { version = "37.0.0", default-features = false }
frame-benchmarking-cli = { version = "42.0.0", default-features = false }
futures = { version = "0.3.30" }
jsonrpsee = { version = "0.23.2" }
log = { version = "0.4.21", default-features = false }
pallet-transaction-payment-rpc = { version = "40.0.0", default-features = false }
polkadot-cli = { version = "17.0.0", default-features = false }
polkadot-primitives = { version = "15.0.0", default-features = false }
prometheus-endpoint = { version = "0.17.0", default-features = false, package = "substrate-prometheus-endpoint" }
sc-basic-authorship = { version = "0.44.0", default-features = false }
sc-chain-spec = { version = "37.0.0", default-features = false }
sc-cli = { version = "0.46.0", default-features = false }
sc-client-api = { version = "37.0.0", default-features = false }
sc-consensus = { version = "0.43.0", default-features = false }
sc-executor = { version = "0.40.0", default-features = false }
sc-network = { version = "0.44.0", default-features = false }
sc-network-sync = { version = "0.43.0", default-features = false }
sc-offchain = { version = "39.0.0", default-features = false }
sc-rpc = { version = "39.0.0", default-features = false }
sc-service = { version = "0.45.0", default-features = false }
sc-sysinfo = { version = "37.0.0", default-features = false }
sc-telemetry = { version = "24.0.0", default-features = false }
sc-tracing = { version = "37.0.0", default-features = false }
sc-transaction-pool = { version = "37.0.0", default-features = false }
sc-transaction-pool-api = { version = "37.0.0", default-features = false }
serde = { version = "1.0.197", default-features = false }
serde_json = { version = "1.0.114", default-features = false }
sp-api = { version = "34.0.0", default-features = false }
sp-block-builder = { version = "34.0.0", default-features = false }
sp-blockchain = { version = "37.0.0", default-features = false }
sp-consensus-aura = { version = "0.40.0", default-features = false }
sp-core = { version = "34.0.0", default-features = false }
sp-io = { version = "38.0.0", default-features = false }
sp-keystore = { version = "0.40.0", default-features = false }
sp-runtime = { version = "39.0.0", default-features = false }
sp-timestamp = { version = "34.0.0", default-features = false }
substrate-frame-rpc-system = { version = "38.0.0", default-features = false }
xcm = { version = "14.1.0", default-features = false, package = "staging-xcm" }
substrate-build-script-utils = { version = "11.0.0", default-features = false }
cumulus-pallet-aura-ext = { version = "0.16.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.16.0", default-features = false }
cumulus-pallet-session-benchmarking = { version = "18.0.0", default-features = false }
cumulus-pallet-xcm = { version = "0.16.0", default-features = false }
cumulus-pallet-xcmp-queue = { version = "0.16.0", default-features = false }
cumulus-primitives-aura = { version = "0.15.0", default-features = false }
cumulus-primitives-storage-weight-reclaim = { version = "7.0.0", default-features = false }
cumulus-primitives-utility = { version = "0.16.0", default-features = false }
frame-executive = { version = "37.0.0", default-features = false }
frame-metadata-hash-extension = { version = "0.5.0", default-features = false }
frame-support = { version = "37.0.0", default-features = false }
frame-system = { version = "37.0.0", default-features = false }
frame-system-benchmarking = { version = "37.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "34.0.0", default-features = false }
frame-try-runtime = { version = "0.43.0", default-features = false }
hex-literal = { version = "0.4.1", default-features = false }
pallet-aura = { version = "36.0.0", default-features = false }
pallet-authorship = { version = "37.0.0", default-features = false }
pallet-balances = { version = "38.0.0", default-features = false }
pallet-assets = { version = "39.0.0", default-features = false }
pallet-multisig = { version = "37.0.0", default-features = false }
pallet-utility = { version = "37.0.0", default-features = false }
pallet-identity = { version = "37.0.0", default-features = false }
pallet-proxy = { version = "37.0.0", default-features = false }
pallet-collator-selection = { version = "18.0.0", default-features = false }
pallet-message-queue = { version = "40.0.0", default-features = false }
pallet-session = { version = "37.0.0", default-features = false }
pallet-sudo = { version = "37.0.0", default-features = false }
pallet-timestamp = { version = "36.0.0", default-features = false }
pallet-transaction-payment = { version = "37.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "37.0.0", default-features = false }
pallet-xcm = { version = "16.0.0", default-features = false }
parachain-info = { version = "0.16.0", default-features = false, package = "staging-parachain-info" }
parachains-common = { version = "17.0.0", default-features = false }
polkadot-parachain-primitives = { version = "14.0.0", default-features = false }
polkadot-runtime-common = { version = "16.0.0", default-features = false }
scale-info = { version = "2.11.1", default-features = false }
smallvec = { version = "1.11.0", default-features = false }
sp-genesis-builder = { version = "0.15.0", default-features = false }
sp-inherents = { version = "34.0.0", default-features = false }
sp-offchain = { version = "34.0.0", default-features = false }
sp-session = { version = "35.0.0", default-features = false }
sp-transaction-pool = { version = "34.0.0", default-features = false }
sp-version = { version = "37.0.0", default-features = false }
xcm-builder = { version = "16.0.0", default-features = false, package = "staging-xcm-builder" }
xcm-executor = { version = "16.0.0", default-features = false, package = "staging-xcm-executor" }
substrate-wasm-builder = { version = "24.0.0", default-features = false }
