[package]
name = "educhain-node"
description = "A parachain node template built with Substrate and Cumulus, part of Polkadot Sdk."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[dependencies]
clap = { features = ["derive"], workspace = true }
color-print = { workspace = true }
docify = { workspace = true }
futures = { workspace = true }
jsonrpsee = { features = ["server"], workspace = true }
log = { workspace = true, default-features = true }
educhain-runtime.workspace = true
polkadot-sdk = { workspace = true, features = ["node"] }
prometheus-endpoint.default-features = true
prometheus-endpoint.workspace = true
serde = { features = ["derive"], workspace = true, default-features = true }

[build-dependencies]
polkadot-sdk = { workspace = true, features = ["substrate-build-script-utils"] }

[features]
default = ["std"]
std = [
	"log/std",
	"educhain-runtime/std",
	"polkadot-sdk/std",
]
runtime-benchmarks = [
	"educhain-runtime/runtime-benchmarks",
	"polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
	"educhain-runtime/try-runtime",
	"polkadot-sdk/try-runtime",
]
